--- a/style/index.html
+++ b/style/index.html
@@ -6,20 +6,98 @@
     <title>DND test project 1</title>
 </head>
 <body>
-    <h1>Quests of Amoria</h1>
-    <p> Quests of Amoria is a DND campaign that has been 
-        taking place since Febuary of 2025 and is still
-        far from over. The character roster has changed
-        slightly with some Characters tradgically passing
-        away and others deciding to go their own path
-        seperate from the party itself</p>
-    <h2>World</h2>
-    <p> Quest of Amoria takes place in the world of Enevell
-        and is centered on the nation of Tregaron and its
-        constant battles against the dragons of the East
-        through out history. Enevell is on the brink of 
-        terror once more 
-    </p>
-    <img src="Enevell_2.jpg" alt="Enevell"></img>
-</body>
+   
+ <style>
+      img {
+        width: 500px;
+        border-radius: 50px;
+        height: 450px;
+        float: right;
+        margin-right: 20px;
+      }
+      </style>
+        <img src="/images/enevell_2.jpg" 
+            width="500"
+            height="400">  
+        <h1>Quests of Amoria</h1>
+   <p>Quest of Amoria is a DnD campaign
+      designed for a long term playthrough
+      for players of all skill levels. The
+      campaign started 14th of febuary 2025 
+      and has been going on once per week 
+      almost consistantly since. The campaign 
+      is designed for 4-6 players and can be 
+      played by anyone with an interest in DND 5e, 
+      The youngest current player is 16 and oldest 21
+      (how ever one previous player was 46). Its a quite 
+      tight group which so far have been playing all sorts 
+      of games outside of dnd as well with a big focus on 
+      just talking and having fun.   </p>
+    <br>
+   
+    <p>The campaign is set in the nation of Enevell, Enevell is a 
+     nation of prosperity and innovation being on the forefront of 
+     alchemical and magical development and research.</p>
+     <h2>characters</h2>
+    <p>The player roster has been consistant 
+        with four players playing the characters 
+        <i>"Skipper"</i> a ranger from the Wyrdwoods setting 
+        out to find answers about her past.
+        <i>"Kael sivler tounge"</i> a brave paladin in question 
+        of his own faith and legacy trying to find his way. 
+        <i>"Reiarin"</i> an artificer who got betrayed by her mentor 
+        and now is haunted by her past trying to find answers 
+        to why. 
+        <i>"Thiseas Nyx"</i> a rouge who grew up in the circus 
+        with his sister and when she went missing he left the 
+        circus behind to set out into a life of petty crime to 
+        survive before he made the big mistake of trying to 
+        steal from <i>"Kael"</i> and later got pulled along for the rest 
+        of the road putting his skills to use where it matters and 
+        trying to track down his sister </p>
+    <p>Notable player character mentions who have or are still 
+        playing are <i>"Alexander"</i> a son of the sun god of Apollo 
+        who left shortly after <i>"Alexander"</i> was born and now hes 
+        trying to find him and reconnect. <i>"Sigcarey"</i> a older 
+        ranger also from Wyrdwood is the father of <i>"Skipper"</i> 
+        and returned back to his village after hunting for a 
+        few days finding the village in ruins and his daughter 
+        missing, He set out to find her and make sure she would 
+        survive and grow. He realised she would do fine without 
+        him and no longer needed him so he decided to go a new 
+        path away from adventuring and settle down again at an 
+        attempt to retire his mind and body from the forest and 
+        roads hes known all his life, <i>"Bob"</i> a Barbarian who spent 
+        time with the party a short while before loosing his mind 
+        in a dungeon and succumbing to the bow of <i>"Skipper"</i> after 
+        turning on his own. <i>"Fern"</i> a Druid who appeared and helped 
+        the party when they set out accross Dragons pass in dangerous 
+        lands and then decided to stick around because they had 
+        nothing better going on and wanted to experience something 
+        new</p>
+    <br>
+    <h2>Summary of Quest of Amoria</h2>
+    <p>The campaign started out in the small village of Ravenwood with 
+        a red haired girl walking into the adventurers guild in search 
+        for a job. She walked in and met another lone adventurer and 
+        they decided to set out together with the goal of surviving 
+        some simple adventures to grow stronger and more experienced.
+        They soon met two more adventurers and set out on an adventure 
+        to fight a bandit camp to the south together. They succeeded and 
+        continued by traveling from Ravenwood to the trade town of Dimmouth 
+        where they cleared an infested mine of eldritch horrors guarding a 
+        forgotten Grimoar of magic. They learned that these grimoars were 
+        created by an evil mage and are now scattered accross the world with 
+        a cult trying to gather up all of them to unleash the magical horrors 
+        hidden inside once more. They got rewarded for their bravery and continued 
+        their travels finding a second book in the capital city of tregaron before 
+        doing a few smaller quest but as important if not more to make a name for 
+        themselves and gear up for the upcoming battles against the cult and a new 
+        threat which came from the east and flew in breathing fire and destruction 
+        where ever it went. So far they have collected 2 grimoars with 2 more to go 
+        before they have them all and they have made a lot of friends in their travels 
+        but also enemies with dragons and cultists alike trying to hunt them down</p>
+    <br>
+   
+               </body>
 </html>
