Added Npcs placeholder

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                             <li><a href="#characters">characters</a></li>
                             <li><a href="#sessions">Sessions</a></li>
                             <li><a href="https://app.roll20.net/campaigns/details/19107455/myths-and-tales-of-amoria">Roll20</a></li>
+                            <li><a href="#contact">Npcs</a></li>
                         </ul>
                     </nav>
             </section>
